modified:   assets/resume.docx 	modified:   assets/resume.pdf 	modified:   assets/resume_1page.docx modified:   assets/resume_1page.pdf 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Sofia</h1>
-											<h2>A Technical Leader at NewWave</br>interested in working on challenging problems around data...</h2>
+											<h2>A Technical Leader at NewWave</br>interested in working on challenging problems around data!</h2>
 												<p><a class="btn btn-primary btn-learn" href="assets/resume.pdf" target="_blank">Download Resume <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
@@ -132,7 +132,7 @@
 									<div class="about-desc">
 										<span class="heading-meta">About</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<strong>My name is Sofia Dutta,</strong> a Technical Leader and Senior Data Scientist at <a href="https://newwave.io/" target="_blank">NewWave Telecom & Technologies, Inc.</a> At NewWave, I am part of a team working on Data Quality Analytics problems in the <a href="https://newwave.io/imersis-newwave-mathematica-state-data-quality" target="_blank">Imersis project</a>.</br></br>I have previously worked on many Data Science and Deep Learning projects as a graduate student at UMBC.</br></br>Before that, I used to work as a Software Engineer for <a href="https://www.tcs.com/" target="_blank">Tata Consultancy Services</a> from 2010 to 2018.</p>
+										<strong>My name is Sofia Dutta,</strong> a Technical Leader at <a href="https://newwave.io/" target="_blank">NewWave Telecom & Technologies, Inc.</a> At NewWave, I am part of a team working on Data Quality Analytics problems in the <a href="https://newwave.io/imersis-newwave-mathematica-state-data-quality" target="_blank">Imersis project</a>.</br></br>I have previously worked on many Data Science and Deep Learning projects as a graduate student at UMBC.</br></br>Before that, I used to work as a Software Engineer for <a href="https://www.tcs.com/" target="_blank">Tata Consultancy Services</a> from 2010 to 2018.</p>
 									</div>
 								</div>
 							</div>
@@ -186,15 +186,29 @@
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="https://newwave.io/" target="_blank">Senior Data Scientist</a> <span>Present - 2021</span></h2>
-									   <p>Senior Data Scientist at <a href="https://newwave.io/" target="_blank">NewWave Telecom and Technologies, Inc.</a>, Woodlawn, MD, USA</p>
+					               	<h2><a href="https://newwave.io/" target="_blank">Technical Leader</a> <span>Present - 2021</span></h2>
+									   <p>Technical Leader at <a href="https://newwave.io/" target="_blank">NewWave Telecom and Technologies, Inc.</a>, Woodlawn, MD, USA</p>
 											<ul>
-												<li>Working on the Imersis project. Performing data quality analysis on millions of healthcare records from Centers for Medicare & Medicaid. Driving system design work and making the right platform choices for NewWave’s projects.</li>
-												<li>Successfully improved computation speed by 10-fold by deploying data analysis workflow in Google Cloud Platform(GCP) clusters and using Apache Spark for quality metrics computations.</li>
-												<li>Utilizing Google Cloud Storage and BigQuery for storage and faster processing of large quantities of healthcare data.</li>
-												<li>Training machine learning models using thousands of rules for quality computation metrics.</li>
-												<li>Leading data-processing efforts, guiding new employees to quickly ramp up on data analytics and achieve project goals.</li>
-												<li>Using Apache Airflow orchestrated Big Data processing on GCP clusters and automated data analytics workflow for Imersis project.</li>
+												<li>Designed the complete system architecture, database schema, and data workflow for the <a href="https://newwave.io/imersis-newwave-mathematica-state-data-quality" target="_blank">Imersis</a> data quality analytics platform.</li>
+												<li>Built the project's cloud infrastructure setup from scratch.</li>
+												<li>Built scripts to process hundreds of millions of healthcare records from the Centers for Medicare & Medicaid.</li>
+												<li>Created pre-processing scripts for consuming large batches of unstructured customer data.</li>
+												<li>Developed Apache PySpark code to compute data quality metrics for customer data.</li>
+												<li>Created Looker dashboard visualizations with drill-down options that "explains" why the data quality came out to a certain value.</li>
+												<li>Due to the lack of large quantities of data, re-designed the machine learning goal of the project into a data quality "Explainable AI" system.</li>
+												<li>Built a data quality system for State governments that allows them to understand where to improve their upstream data ingestion processes and helped them observe how that improves their data quality over time.</li>
+												<li>Reduced costs at four levels of the project:</li>
+												<ul>
+													<li>Pre-processing: Built scripts that brought down the data pre-processing time from ten days to a couple of hours.</li>
+													<li>Uptime of cluster: Analyzed causes of high cloud expenditure and deployed Apache Airflow workflow management platform scripts to automate resource uptime only during hours of usage. Reduced cost from thousands of dollars to a couple hundred.</li>
+													<li>Storage v/s data transfer: Performed the cost advantage analysis of using a Google compute engine with large storage versus using more network data transfer.</li>
+													<li>Partially working in local servers: Built a system that handled pre-processing in our local data farm to reduce project costs from over ten thousand dollars to a few hundred in a month.</li>
+												</ul>
+												<li>Quickly learned new technologies like Apache Airflow, Databricks, and Google Cloud Platform and guided team members in their technology ramp-up for the past 2 years and helped them in setting up data workflows in the cloud.</li>
+												<li>Provided educational expertise and mentoring to junior team members.</li>
+												<li>Built product feature lists with stakeholders, conducted system design sessions with other architects on the team and led code review meetings.</li>
+												<li>Investigated root causes for customer-found defects. Carried out several customer demonstrations to help sell the product and handled rapid prototyping and solution building for ad-hoc requirements and last-minute feature requests from the customer.</li>
+												<li>Advised management, business, and technical staff on the usage of specific technologies like Apache Airflow and Google Cloud Platform.</li>
 								   			</ul>
 					               </div>
 					            </div>
@@ -209,8 +223,8 @@
 					               	<h2><a href="https://newwave.io/" target="_blank">Data Scientist Intern</a> <span>2020 - 2020</span></h2>
 									   <p>Data Scientist Intern at <a href="https://newwave.io/" target="_blank">NewWave Telecom and Technologies, Inc.</a>, Woodlawn, MD, USA</p>
 									   		<ul>
-												<li>Carried out data visualization tasks using LookML, Matplotlib, and Seaborn to present data quality outcomes from various quality computation metrics.</li>
-												<li>Created an end-to-end architecture design and database schema design for the Imersis data quality analytics platform.</li>
+												<li>Carried out data visualization tasks using LookML, Matplotlib, and Seaborn to present quality measures based on chosen computation metrics.</li>
+												<li>Successfully improved computation speed by 10-fold by deploying data analysis workflow in Google Cloud Platform (GCP) clusters and using Apache Spark for quality metrics computations.</li>
 												<li>Collaborated with the Product Owner and other engineers in creating mechanisms for generating fake training data using Python programming to test out the efficacy of machine learning algorithms used in the project.</li>
 												<li>Carried out necessary DevOps tasks for setting up Big Data Analytics environment by configuring GCP environment to execute Python programs and connected the cloud infrastructure with Looker's dashboards for delivering computed results to be presented to customers.</li>
 								   			</ul>
@@ -226,8 +240,8 @@
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="https://ebiquity.umbc.edu" target="_blank">Semantic Web Researcher</a> <span>2020 - 2019</span></h2>
-									   <p>Graduate Student Researcher in Semantic Web and Smart Home Access Control, <a href="https://ebiquity.umbc.edu" target="_blank">Ebiquity Group</a>, <a href="https://www.umbc.edu" target="_blank">UMBC</a>, USA</p>
+					                  <h2><a href="https://ebiquity.umbc.edu" target="_blank">Researcher</a> <span>2020 - 2019</span></h2>
+									   <p>Researcher at <a href="https://ebiquity.umbc.edu" target="_blank">Ebiquity Group</a>, <a href="https://www.umbc.edu" target="_blank">UMBC</a>, USA</p>
 										   	<ul>
 									   			<li>Authored an <a href="https://ebiquity.umbc.edu/paper/owl/id/887/Context-Sensitive-Access-Control-in-Smart-Home-Environments">Ontology</a> for Smart Home Access Control by extending earlier research in Semantic Web.</li>
 									   			<li>Developed an <a href="https://github.com/sofiadutta/AndroidSmartLights">Android app</a> for handling context-sensitive access control in a Smart Home Environment.</li>
@@ -240,24 +254,17 @@
 
 					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 					            <div class="timeline-entry-inner">
-					               <div class="timeline-icon color-2">
-					                  <i class="icon-pen2"></i>
-					               </div>
-					               <div class="timeline-label">
-					               	<h2><a href="https://www.tcs.com" target="_blank">Software Developer and Data Analyst</a> <span>2018 - 2010</span></h2>
-									   <p>Software Developer and Data Analyst at <a href="https://www.tcs.com" target="_blank">Tata Consultancy Services (TCS) Ltd.</a>, India</p>
-									   <ul>
-									   <li>Led the design, development, and delivery management of seven projects for clients of TCS.</li>
-									   <li>Created API interfaces using PL/SQL stored procedures for daily usage for clients of TCS.</li>
-									   <li>Led meetings to capture requirements from DHL UK, Staples USA, Hyatt USA, Kaiser-Permanente USA.</li>
-									   <li>Carried out change based regression analysis and documented software functional specifications.</li>
-									   <li>Prepared test plans and executed system integration testing and user-acceptance testing.</li>
-									   <li>Ensured client systems were up in four hours after migration activities saving millions of dollars in potential revenue lost.</li>
-									   <li>Implemented scripts for data migration of a billion records while adhering to strict time SLA bounds.</li>
-									   <li>Completed client data migration from legacy Oracle Apps (11i) to Oracle ERP Suite (R12).</li>
-									   <li>From 2013 - 2018, managed continuous integration and continuous deployment in production environments.</li>
-									   <li>Got certified in seven Oracle Apps competencies while working for client projects.</li>
-									   </ul>
+					               	<div class="timeline-icon color-2">
+					                  	<i class="icon-pen2"></i>
+					               	</div>
+					               	<div class="timeline-label">
+					               	<h2><a href="https://www.tcs.com" target="_blank">Software Engineer, Technical Leader</a> <span>2018 - 2010</span></h2>
+									   	<p>Software Developer and Data Analyst at <a href="https://www.tcs.com" target="_blank">Tata Consultancy Services (TCS) Ltd.</a>, India</p>
+										<ul>
+											<li>Led the design, development, and delivery of API interfaces using PL/SQL stored procedures for several projects of TCS.</li>
+											<li>Carried out change based regression impact analysis, created software functional specifications, prepared test plans for several projects of TCS.</li>
+											<li>Performed system integration, user-acceptance and performance testing and ensured client systems had very high uptime even when carrying out data migration activities. Saved millions of dollars in potential revenue lost to the client and was awarded for said effort by clients.</li>
+									   	</ul>
 					               </div>
 					            </div>
 					         </article>
@@ -461,7 +468,7 @@
 									    </div>
 									    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 									         <div class="panel-body">
-												 <p><strong>2020 - 2019</strong></br>Working on my Master's in Data Science from <a href="https://umbc.edu" target="_blank">University of Maryland, Baltimore County</a>, Baltimore, USA. GPA: <strong>4.0</strong>!</br>See transcript <a href="assets/transcript-sofia-dutta.pdf" target="_blank">here</a>.</p>
+												 <p><strong>2020 - 2019</strong></br>Completed my Master's in Data Science from <a href="https://umbc.edu" target="_blank">University of Maryland, Baltimore County</a>, Baltimore, USA. GPA: <strong>4.0</strong>!</br>See transcript <a href="assets/transcript-sofia-dutta.pdf" target="_blank">here</a>.</p>
 									         </div>
 									    </div>
 									</div>
