--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Sofia</h1>
 											<h2>A Technical Leader at NewWave</br>interested in working on challenging problems around data!</h2>
-												<p><a class="btn btn-primary btn-learn" href="assets/resume.pdf" target="_blank">Download Resume <i class="icon-download4"></i></a></p>
+												<p><a class="btn btn-primary btn-learn" href="assets/resume-sofia-dutta-112522.pdf" target="_blank">Download Resume <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
