--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 					<a href="https://github.com/sofiadutta" target="_blank"><i class="icon-github"></i></a> |
 					<a href="https://twitter.com/sofia_datasci" target="_blank"><i class="icon-twitter2"></i></a> |
 					<a href="https://scholar.google.com/citations?hl=en&user=33a12FwAAAAJ" target="_blank"><i class="icon-study"></i></a> | 
-					<a href="https://www.youtube.com/watch?v=DZq-oZ_Cv1g&list=UUEB2cqBZTym9WxWvGu2UA0w&index=4" target="_blank"><i class="icon-youtube"></i></a>
+					<a href="https://www.youtube.com/@sofiadutta" target="_blank"><i class="icon-youtube"></i></a>
 				</p>
 			</div>
 
