--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Sofia</h1>
-											<h2>A Technical Leader at NewWave</br>interested in working on challenging problems around data!</h2>
+											<h2>I am building the signatures of application detection for the vulnerability records of Cisco's Secure Firewall devices.</br>I am nterested in working on challenging problems around data!</h2>
 												<p><a class="btn btn-primary btn-learn" href="assets/resume-sofia-dutta-112522.pdf" target="_blank">Download Resume <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
