modified:   index.html

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Sofia</h1>
-											<h2>A Cisco Software Engineer building ways of identifying applications for the firewall.</br>I am interested in working on challenging problems around data!</h2>
+											<h2>A Cisco Software Engineer, building ways of identifying apps for the firewall.</br>I am interested in working on challenging problems around data!</h2>
 												<p><a class="btn btn-primary btn-learn" href="assets/resume-sofia-dutta-112522.pdf" target="_blank">Download Resume <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
@@ -132,7 +132,7 @@
 									<div class="about-desc">
 										<span class="heading-meta">About</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<strong>My name is Sofia Dutta,</strong> a Technical Leader at <a href="https://newwave.io/" target="_blank">NewWave Telecom & Technologies, Inc.</a> At NewWave, I am part of a team working on Data Quality Analytics problems in the <a href="https://newwave.io/imersis-newwave-mathematica-state-data-quality" target="_blank">Imersis project</a>.</br></br>I have previously worked on many Data Science and Deep Learning projects as a graduate student at UMBC.</br></br>Before that, I used to work as a Software Engineer for <a href="https://www.tcs.com/" target="_blank">Tata Consultancy Services</a> from 2010 to 2018.</p>
+										<strong>My name is Sofia Dutta,</strong> a Software Engineer at <a href="https://www.cisco.com/site/us/en/index.html" target="_blank">Cisco Systems Inc.</a> At Cisco, I am part of the VDB team working on ways to identify applications for <a href="https://www.cisco.com/site/us/en/products/security/firewalls/index.html" target="_blank">the firewall</a>.</br></br>I have previously worked as a technical leader at a <a href="https://newwave.io/" target="_blank">startup</a>, building a data quality solution called the <a href="https://newwave.io/imersis-newwave-mathematica-state-data-quality/" target="_blank">Imersis project</a>. Before that I worked on many Data Science and Deep Learning projects as a graduate student at <a href="https://umbc.edu/" target="_blank">UMBC</a>.</br></br>I also worked as a Software Engineer for <a href="https://www.tcs.com/" target="_blank">Tata Consultancy Services</a> from 2010 to 2018.</p>
 									</div>
 								</div>
 							</div>
@@ -180,13 +180,27 @@
 					<div class="row">
 						<div class="col-md-12">
 				         <div class="timeline-centered">
+									 <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+					            <div class="timeline-entry-inner">
+					               <div class="timeline-icon color-1">
+					                  <i class="icon-pen2"></i>
+					               </div>
+					               <div class="timeline-label">
+					               	<h2><a href="https://newwave.io/" target="_blank">Software Engineer</a> <span>Present - 2023</span></h2>
+									   <p>Software Engineer at <a href="https://www.cisco.com/site/us/en/index.html" target="_blank">Cisco Systems, Inc.</a>, Fulton, MD, USA</p>
+											<ul>
+												<li>I am building ways of identifying applications for <a href="https://www.cisco.com/site/us/en/products/security/firewalls/index.html" target="_blank">the firewall</a>.</li>
+								   			</ul>
+					               </div>
+					            </div>
+					         </article>
 									 <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
 					            <div class="timeline-entry-inner">
 					               <div class="timeline-icon color-2">
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="https://newwave.io/" target="_blank">Technical Leader</a> <span>Present - 2021</span></h2>
+					               	<h2><a href="https://newwave.io/" target="_blank">Technical Leader</a> <span>2023 - 2021</span></h2>
 									   <p>Technical Leader at <a href="https://newwave.io/" target="_blank">NewWave Telecom and Technologies, Inc.</a>, Woodlawn, MD, USA</p>
 											<ul>
 												<li>Designed the complete system architecture, database schema, and data workflow for the <a href="https://newwave.io/imersis-newwave-mathematica-state-data-quality" target="_blank">Imersis</a> data quality analytics platform.</li>
