--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Sofia</h1>
-											<h2>A Software Engineer with Cisco Systems Inc., building models to identify apps for the firewall.</br>I am interested in working on challenging problems around data!</h2>
+											<h2>A Software Engineer with Cisco Systems Inc., building models to identify apps for the Cisco Secure Firewall.</br>I am interested in working on challenging problems around data!</h2>
 												<p><a class="btn btn-primary btn-learn" href="assets/resume-sofia-dutta-080123.pdf" target="_blank">Download Resume <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
